--- a/public/apps/index.html
+++ b/public/apps/index.html
@@ -1,74 +1,74 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>App Selector</title>
-    <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/core.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/apps.css" rel="stylesheet" type="text/css" />
-    <script src="../index.js"></script>
-    <script src="../colors.js" defer></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width" name="viewport" />
+  <title>App Selector</title>
+  <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/core.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/apps.css" rel="stylesheet" type="text/css" />
+  <script src="../index.js"></script>
+  <script defer src="../colors.js"></script>
+</head>
 
-  <body>
-    <div id="container">
-      <main>
-        <header>
-          <h1>
-            <i class="fa-solid fa-square-check"></i>Select the app to patch
-          </h1>
-          <h2 class="prog"></h2>
-          <form ref="uploadForm" id="uploadForm">
-            <input id="apkUpload" type="file" name="apk" accept=".apk" hidden />
-            <input type="submit" id="submitButton" hidden />
-          </form>
-          <button class="upl highlighted" onclick="apkField.click()">
-            <i class="fa-solid fa-upload"></i>Upload APK
-          </button>
-          <button class="shw" onclick="oldState(this)">Back</button>
-          <input
-            class="searchBox"
-            id="search"
-            type="search"
-            placeholder="Search for an app..."
-          />
-        </header>
-        <div id="content--wrapper">
-          <div id="content">
-            <ul id="appList"></ul>
-          </div>
-        </div>
-      </main>
-      <footer>
-        <a
-          href="https://github.com/reisxd/revanced-builder"
-          target="_blank"
-          aria-label="ReVanced Builder on GitHub"
-          title="ReVanced Builder on GitHub"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-brands fa-xl fa-github"
-          ></i
-        ></a>
-        <a
-          href="/about"
-          aria-label="About ReVanced Builder"
-          title="About ReVanced Builder"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-solid fa-xl fa-question-circle"
-          ></i
-        ></a>
-        <a href="/settings" aria-label="Settings" title="Settings"
-          ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
-        ></a>
-        <span class="right"></span>
-        <button class="highlighted" id="continue" onclick="setApp()">
-          Continue
-        </button>
-      </footer>
+<body>
+<div id="container">
+  <main>
+    <header>
+      <h1>
+        <i class="fa-solid fa-square-check"></i>Select the app to patch
+      </h1>
+      <h2 class="prog"></h2>
+      <form id="uploadForm" ref="uploadForm">
+        <input accept=".apk" hidden id="apkUpload" name="apk" type="file" />
+        <input hidden id="submitButton" type="submit" />
+      </form>
+      <button class="upl highlighted" onclick="apkField.click()">
+        <i class="fa-solid fa-upload"></i>Upload APK
+      </button>
+      <button class="shw" onclick="oldState(this)">Back</button>
+      <input
+        class="searchBox"
+        id="search"
+        placeholder="Search for an app..."
+        type="search"
+      />
+    </header>
+    <div id="content--wrapper">
+      <div id="content">
+        <ul id="appList"></ul>
+      </div>
     </div>
-  </body>
-  <script src="../apps.js"></script>
+  </main>
+  <footer>
+    <a
+      aria-label="ReVanced Builder on GitHub"
+      href="https://github.com/reisxd/revanced-builder"
+      target="_blank"
+      title="ReVanced Builder on GitHub"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-brands fa-xl fa-github"
+    ></i
+    ></a>
+    <a
+      aria-label="About ReVanced Builder"
+      href="/about"
+      title="About ReVanced Builder"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-solid fa-xl fa-question-circle"
+    ></i
+    ></a>
+    <a aria-label="Settings" href="/settings" title="Settings"
+    ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
+    ></a>
+    <span class="right"></span>
+    <button class="highlighted" id="continue" onclick="setApp()">
+      Continue
+    </button>
+  </footer>
+</div>
+</body>
+<script src="../apps.js"></script>
 </html>
