--- a/public/exited/index.html
+++ b/public/exited/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Exited</title>
-    <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/core.css" rel="stylesheet" type="text/css" />
-    <script src="../index.js"></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width" name="viewport" />
+  <title>Exited</title>
+  <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/core.css" rel="stylesheet" type="text/css" />
+  <script src="../index.js"></script>
+</head>
 
-  <body>
-    <div id="container">
-      <main>
-        <header>
-          <h1><i class="fa-solid fa-right-from-bracket"></i>Exited</h1>
-          <span>You can now close this tab/window.</span>
-        </header>
-      </main>
-    </div>
-  </body>
-  <script>
-    ws.onopen = () => {
-      sendCommand({ event: 'exit' });
-    };
-  </script>
+<body>
+<div id="container">
+  <main>
+    <header>
+      <h1><i class="fa-solid fa-right-from-bracket"></i>Exited</h1>
+      <span>You can now close this tab/window.</span>
+    </header>
+  </main>
+</div>
+</body>
+<script>
+  ws.onopen = () => {
+    sendCommand({ event: 'exit' });
+  };
+</script>
 </html>
