--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,83 +1,83 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>About</title>
-    <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/core.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/about.css" rel="stylesheet" type="text/css" />
-    <script src="../index.js"></script>
-    <script src="../colors.js" defer></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width" name="viewport" />
+  <title>About</title>
+  <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/core.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/about.css" rel="stylesheet" type="text/css" />
+  <script src="../index.js"></script>
+  <script defer src="../colors.js"></script>
+</head>
 
-  <body>
-    <div id="container">
-      <main>
-        <header>
-          <h1><i class="fa-solid fa-question-circle"></i>About</h1>
-        </header>
-        <div id="content--wrapper">
-          <div id="content">
-            <h2>ReVanced Builder</h2>
-            <p>
-              ReVanced Builder is a simple tool built with NodeJS to patch
-              ReVanced-supported applications. It ships with a beginner-friendly
-              UI so that everyone can use it easily. Check out
-              <a
-                target="_blank"
-                href="https://github.com/reisxd/revanced-builder/blob/main/README.md"
-                >GitHub Readme</a
-              >
-              for more information.
-            </p>
-            <p>
-              Found a Bug?
-              <a
-                target="_blank"
-                href="https://github.com/reisxd/revanced-builder/issues"
-                >Report here!</a
-              >
-            </p>
-            <h2>Contributors</h2>
-            <p>We are highly grateful to them!</p>
-            <a
-              target="_blank"
-              href="https://github.com/reisxd/revanced-builder/graphs/contributors"
-              aria-label="View contributors"
-              title="View contributors"
-            >
-              <img
-                class="desktop"
-                src="https://contrib.rocks/image?repo=reisxd/revanced-builder"
-                alt=""
-              />
-              <img
-                class="mobile"
-                src="https://contrib.rocks/image?repo=reisxd/revanced-builder&columns=5"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
-      </main>
-      <footer>
+<body>
+<div id="container">
+  <main>
+    <header>
+      <h1><i class="fa-solid fa-question-circle"></i>About</h1>
+    </header>
+    <div id="content--wrapper">
+      <div id="content">
+        <h2>ReVanced Builder</h2>
+        <p>
+          ReVanced Builder is a simple tool built with NodeJS to patch
+          ReVanced-supported applications. It ships with a beginner-friendly
+          UI so that everyone can use it easily. Check out
+          <a
+            href="https://github.com/reisxd/revanced-builder/blob/main/README.md"
+            target="_blank"
+          >GitHub Readme</a
+          >
+          for more information.
+        </p>
+        <p>
+          Found a Bug?
+          <a
+            href="https://github.com/reisxd/revanced-builder/issues"
+            target="_blank"
+          >Report here!</a
+          >
+        </p>
+        <h2>Contributors</h2>
+        <p>We are highly grateful to them!</p>
         <a
-          href="https://github.com/reisxd/revanced-builder"
+          aria-label="View contributors"
+          href="https://github.com/reisxd/revanced-builder/graphs/contributors"
           target="_blank"
-          aria-label="ReVanced Builder on GitHub"
-          title="ReVanced Builder on GitHub"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-brands fa-xl fa-github"
-          ></i
-        ></a>
-        <a href="/settings" aria-label="Settings" title="Settings"
-          ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
-        ></a>
-        <span class="right"></span>
-        <button onclick="location.href='/'">Home</button>
-      </footer>
+          title="View contributors"
+        >
+          <img
+            alt=""
+            class="desktop"
+            src="https://contrib.rocks/image?repo=reisxd/revanced-builder"
+          />
+          <img
+            alt=""
+            class="mobile"
+            src="https://contrib.rocks/image?repo=reisxd/revanced-builder&columns=5"
+          />
+        </a>
+      </div>
     </div>
-  </body>
+  </main>
+  <footer>
+    <a
+      aria-label="ReVanced Builder on GitHub"
+      href="https://github.com/reisxd/revanced-builder"
+      target="_blank"
+      title="ReVanced Builder on GitHub"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-brands fa-xl fa-github"
+    ></i
+    ></a>
+    <a aria-label="Settings" href="/settings" title="Settings"
+    ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
+    ></a>
+    <span class="right"></span>
+    <button onclick="location.href='/'">Home</button>
+  </footer>
+</div>
+</body>
 </html>
