--- a/public/dependencies/index.html
+++ b/public/dependencies/index.html
@@ -1,74 +1,74 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Downloading dependencies</title>
-    <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/core.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/dependencies.css" rel="stylesheet" type="text/css" />
-    <script src="../index.js"></script>
-    <script src="../colors.js" defer></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width" name="viewport" />
+  <title>Downloading dependencies</title>
+  <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/core.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/dependencies.css" rel="stylesheet" type="text/css" />
+  <script src="../index.js"></script>
+  <script defer src="../colors.js"></script>
+</head>
 
-  <body>
-    <div id="container">
-      <main>
-        <header>
-          <h1><i class="fa-solid fa-download"></i>Downloading dependencies</h1>
-          <span
-            >Please wait while the app downloads the required
+<body>
+<div id="container">
+  <main>
+    <header>
+      <h1><i class="fa-solid fa-download"></i>Downloading dependencies</h1>
+      <span
+      >Please wait while the app downloads the required
             dependencies.</span
-          >
-        </header>
-        <div id="content--wrapper">
-          <div id="content">
-            <span class="log"></span>
-          </div>
-        </div>
-        <progress value="0"></progress>
-      </main>
-      <footer>
-        <a
-          href="https://github.com/reisxd/revanced-builder"
-          target="_blank"
-          aria-label="ReVanced Builder on GitHub"
-          title="ReVanced Builder on GitHub"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-brands fa-xl fa-github"
-          ></i
-        ></a>
-        <a
-          href="/about"
-          target="_blank"
-          aria-label="About ReVanced Builder"
-          title="About ReVanced Builder"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-solid fa-xl fa-question-circle"
-          ></i
-        ></a>
-        <a
-          href="/settings"
-          target="_blank"
-          aria-label="Settings"
-          title="Settings"
-          ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
-        ></a>
-        <span class="right"></span>
-        <button onclick="location.href='../index.html'">Back</button>
-        <button
-          id="continue"
-          class="highlighted disabled"
-          onclick="window.location = '/apps/'"
-        >
-          Continue
-        </button>
-      </footer>
+      >
+    </header>
+    <div id="content--wrapper">
+      <div id="content">
+        <span class="log"></span>
+      </div>
     </div>
-  </body>
-  <script>
-    ws.onopen = () => updateFiles();
-  </script>
+    <progress value="0"></progress>
+  </main>
+  <footer>
+    <a
+      aria-label="ReVanced Builder on GitHub"
+      href="https://github.com/reisxd/revanced-builder"
+      target="_blank"
+      title="ReVanced Builder on GitHub"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-brands fa-xl fa-github"
+    ></i
+    ></a>
+    <a
+      aria-label="About ReVanced Builder"
+      href="/about"
+      target="_blank"
+      title="About ReVanced Builder"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-solid fa-xl fa-question-circle"
+    ></i
+    ></a>
+    <a
+      aria-label="Settings"
+      href="/settings"
+      target="_blank"
+      title="Settings"
+    ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
+    ></a>
+    <span class="right"></span>
+    <button onclick="location.href='../index.html'">Back</button>
+    <button
+      class="highlighted disabled"
+      id="continue"
+      onclick="window.location = '/apps/'"
+    >
+      Continue
+    </button>
+  </footer>
+</div>
+</body>
+<script>
+  ws.onopen = () => updateFiles();
+</script>
 </html>
