--- a/public/devices/index.html
+++ b/public/devices/index.html
@@ -1,73 +1,73 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Device Selector</title>
-    <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/core.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/patches.css" rel="stylesheet" type="text/css" />
-    <script src="../index.js"></script>
-    <script src="../colors.js" defer></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width" name="viewport" />
+  <title>Device Selector</title>
+  <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/core.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/patches.css" rel="stylesheet" type="text/css" />
+  <script src="../index.js"></script>
+  <script defer src="../colors.js"></script>
+</head>
 
-  <body>
-    <div id="container">
-      <main>
-        <header>
-          <h1>
-            <i class="fa-solid fa-tablet-screen-button"></i>Select the device(s)
-            you want to install ReVanced to
-          </h1>
-          <span
-            >ReVanced Builder has detected that you have more than one device
+<body>
+<div id="container">
+  <main>
+    <header>
+      <h1>
+        <i class="fa-solid fa-tablet-screen-button"></i>Select the device(s)
+        you want to install ReVanced to
+      </h1>
+      <span
+      >ReVanced Builder has detected that you have more than one device
             plugged in.<br />Please select the device(s) that you want to
             install ReVanced.</span
-          >
-        </header>
-        <div id="content--wrapper">
-          <div id="content">
-            <ul id="devices"></ul>
-          </div>
-        </div>
-      </main>
-      <footer>
-        <a
-          href="https://github.com/reisxd/revanced-builder"
-          target="_blank"
-          aria-label="ReVanced Builder on GitHub"
-          title="ReVanced Builder on GitHub"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-brands fa-xl fa-github"
-          ></i
-        ></a>
-        <a
-          href="/about"
-          target="_blank"
-          aria-label="About ReVanced Builder"
-          title="About ReVanced Builder"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-solid fa-xl fa-question-circle"
-          ></i
-        ></a>
-        <a
-          href="/settings"
-          target="_blank"
-          aria-label="Settings"
-          title="Settings"
-          ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
-        ></a>
-        <span class="right"></span>
-        <button id="back" onclick="history.back()">Back</button>
-        <button class="highlighted" id="continue" onclick="setDevice()">
-          Continue
-        </button>
-      </footer>
+      >
+    </header>
+    <div id="content--wrapper">
+      <div id="content">
+        <ul id="devices"></ul>
+      </div>
     </div>
-  </body>
-  <script>
-    ws.onopen = () => getDevices();
-  </script>
+  </main>
+  <footer>
+    <a
+      aria-label="ReVanced Builder on GitHub"
+      href="https://github.com/reisxd/revanced-builder"
+      target="_blank"
+      title="ReVanced Builder on GitHub"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-brands fa-xl fa-github"
+    ></i
+    ></a>
+    <a
+      aria-label="About ReVanced Builder"
+      href="/about"
+      target="_blank"
+      title="About ReVanced Builder"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-solid fa-xl fa-question-circle"
+    ></i
+    ></a>
+    <a
+      aria-label="Settings"
+      href="/settings"
+      target="_blank"
+      title="Settings"
+    ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
+    ></a>
+    <span class="right"></span>
+    <button id="back" onclick="history.back()">Back</button>
+    <button class="highlighted" id="continue" onclick="setDevice()">
+      Continue
+    </button>
+  </footer>
+</div>
+</body>
+<script>
+  ws.onopen = () => getDevices();
+</script>
 </html>
