--- a/public/failure/index.html
+++ b/public/failure/index.html
@@ -1,66 +1,66 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Failure</title>
-    <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/core.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/failure.css" rel="stylesheet" type="text/css" />
-    <script src="../index.js"></script>
-    <script src="../colors.js" defer></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width" name="viewport" />
+  <title>Failure</title>
+  <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/core.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/failure.css" rel="stylesheet" type="text/css" />
+  <script src="../index.js"></script>
+  <script defer src="../colors.js"></script>
+</head>
 
-  <body>
-    <div id="container">
-      <main>
-        <header>
-          <h1><i class="fa-solid fa-circle-exclamation"></i>Failure</h1>
-        </header>
-        <div id="content--wrapper">
-          <div id="content">
-            <span class="log-error"></span>
-          </div>
-        </div>
-      </main>
-      <footer>
-        <a
-          href="https://github.com/reisxd/revanced-builder"
-          target="_blank"
-          aria-label="ReVanced Builder on GitHub"
-          title="ReVanced Builder on GitHub"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-brands fa-xl fa-github"
-          ></i
-        ></a>
-        <a
-          href="/about"
-          aria-label="About ReVanced Builder"
-          title="About ReVanced Builder"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-solid fa-xl fa-question-circle"
-          ></i
-        ></a>
-        <a href="/settings" aria-label="Settings" title="Settings"
-          ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
-        ></a>
-        <span class="right"></span>
-        <button onclick="history.back();">Back</button>
-        <button onclick="exitApp();">Exit</button>
-        <button class="highlighted" onclick="location.href='/'">Restart</button>
-      </footer>
+<body>
+<div id="container">
+  <main>
+    <header>
+      <h1><i class="fa-solid fa-circle-exclamation"></i>Failure</h1>
+    </header>
+    <div id="content--wrapper">
+      <div id="content">
+        <span class="log-error"></span>
+      </div>
     </div>
-  </body>
+  </main>
+  <footer>
+    <a
+      aria-label="ReVanced Builder on GitHub"
+      href="https://github.com/reisxd/revanced-builder"
+      target="_blank"
+      title="ReVanced Builder on GitHub"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-brands fa-xl fa-github"
+    ></i
+    ></a>
+    <a
+      aria-label="About ReVanced Builder"
+      href="/about"
+      title="About ReVanced Builder"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-solid fa-xl fa-question-circle"
+    ></i
+    ></a>
+    <a aria-label="Settings" href="/settings" title="Settings"
+    ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
+    ></a>
+    <span class="right"></span>
+    <button onclick="history.back();">Back</button>
+    <button onclick="exitApp();">Exit</button>
+    <button class="highlighted" onclick="location.href='/'">Restart</button>
+  </footer>
+</div>
+</body>
 
-  <script>
-    document.getElementsByClassName(
-      'log-error'
-    )[0].innerHTML += `<strong>[builder]</strong> ${new URLSearchParams(
-      window.location.search
-    )
-      .get('error')
-      .replace(/\n/g, '<br>')}<br>`;
-  </script>
+<script>
+  document.getElementsByClassName(
+    'log-error'
+  )[0].innerHTML += `<strong>[builder]</strong> ${new URLSearchParams(
+    window.location.search
+  )
+    .get('error')
+    .replace(/\n/g, '<br>')}<br>`;
+</script>
 </html>
