--- a/public/patches/index.html
+++ b/public/patches/index.html
@@ -1,80 +1,80 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Select Patches</title>
-    <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/core.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/patches.css" rel="stylesheet" type="text/css" />
-    <script src="../index.js"></script>
-    <script src="../colors.js" defer></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width" name="viewport" />
+  <title>Select Patches</title>
+  <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/core.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/patches.css" rel="stylesheet" type="text/css" />
+  <script src="../index.js"></script>
+  <script defer src="../colors.js"></script>
+</head>
 
-  <body>
-    <div id="container">
-      <main>
-        <header>
-          <h1>
-            <i class="fa-solid fa-rectangle-list"></i>Select patches to include
-          </h1>
-          <span class="left"></span>
-          <div>
-            <button onclick="toggle(true)">Select All</button>
-            <button onclick="toggle(false)">Deselect all</button>
-          </div>
-          <div role="search">
-            <input
-              class="searchBox"
-              id="search"
-              type="search"
-              placeholder="Search for a patch..."
-            />
-          </div>
-        </header>
-        <div id="content--wrapper">
-          <div id="content">
-            <ul id="patchList"></ul>
-          </div>
-        </div>
-      </main>
-      <footer>
-        <a
-          href="https://github.com/reisxd/revanced-builder"
-          target="_blank"
-          aria-label="ReVanced Builder on GitHub"
-          title="ReVanced Builder on GitHub"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-brands fa-xl fa-github"
-          ></i
-        ></a>
-        <a
-          href="/about"
-          target="_blank"
-          aria-label="About ReVanced Builder"
-          title="About ReVanced Builder"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-solid fa-xl fa-question-circle"
-          ></i
-        ></a>
-        <a
-          href="/settings"
-          target="_blank"
-          aria-label="Settings"
-          title="Settings"
-          ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
-        ></a>
-        <span class="right"></span>
-        <button onclick="history.back()">Back</button>
-        <button class="highlighted" id="continue" onclick="setPatches();">
-          Continue
-        </button>
-      </footer>
+<body>
+<div id="container">
+  <main>
+    <header>
+      <h1>
+        <i class="fa-solid fa-rectangle-list"></i>Select patches to include
+      </h1>
+      <span class="left"></span>
+      <div>
+        <button onclick="toggle(true)">Select All</button>
+        <button onclick="toggle(false)">Deselect all</button>
+      </div>
+      <div role="search">
+        <input
+          class="searchBox"
+          id="search"
+          placeholder="Search for a patch..."
+          type="search"
+        />
+      </div>
+    </header>
+    <div id="content--wrapper">
+      <div id="content">
+        <ul id="patchList"></ul>
+      </div>
     </div>
-  </body>
-  <script>
-    ws.onopen = () => loadPatches();
-  </script>
+  </main>
+  <footer>
+    <a
+      aria-label="ReVanced Builder on GitHub"
+      href="https://github.com/reisxd/revanced-builder"
+      target="_blank"
+      title="ReVanced Builder on GitHub"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-brands fa-xl fa-github"
+    ></i
+    ></a>
+    <a
+      aria-label="About ReVanced Builder"
+      href="/about"
+      target="_blank"
+      title="About ReVanced Builder"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-solid fa-xl fa-question-circle"
+    ></i
+    ></a>
+    <a
+      aria-label="Settings"
+      href="/settings"
+      target="_blank"
+      title="Settings"
+    ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
+    ></a>
+    <span class="right"></span>
+    <button onclick="history.back()">Back</button>
+    <button class="highlighted" id="continue" onclick="setPatches();">
+      Continue
+    </button>
+  </footer>
+</div>
+</body>
+<script>
+  ws.onopen = () => loadPatches();
+</script>
 </html>
