--- a/public/settings/index.html
+++ b/public/settings/index.html
@@ -1,150 +1,150 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Settings</title>
-    <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/core.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/settings.css" rel="stylesheet" type="text/css" />
-    <script src="../index.js"></script>
-    <script src="../colors.js" defer></script>
-    <script src="../settings.js" defer></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width" name="viewport" />
+  <title>Settings</title>
+  <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/core.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/settings.css" rel="stylesheet" type="text/css" />
+  <script src="../index.js"></script>
+  <script defer src="../colors.js"></script>
+  <script defer src="../settings.js"></script>
+</head>
 
-  <body>
-    <div id="container">
-      <main>
-        <header>
-          <h1><i aria-hidden="true" class="fa-solid fa-gear"></i>Settings</h1>
-        </header>
-        <div id="content--wrapper">
-          <div id="content">
-            <div class="option">
-              <h3><i class="fa-solid fa-brush"></i>Accent Color</h3>
-              <p>
-                Customize the Accent color of the builder. Use the palette
-                option to use a custom color.
-              </p>
-              <div id="themecolor-picker">
+<body>
+<div id="container">
+  <main>
+    <header>
+      <h1><i aria-hidden="true" class="fa-solid fa-gear"></i>Settings</h1>
+    </header>
+    <div id="content--wrapper">
+      <div id="content">
+        <div class="option">
+          <h3><i class="fa-solid fa-brush"></i>Accent Color</h3>
+          <p>
+            Customize the Accent color of the builder. Use the palette
+            option to use a custom color.
+          </p>
+          <div id="themecolor-picker">
                 <span
                   style="background: #4873b3 none repeat scroll 0% 0%"
                 ></span>
-                <span
-                  style="background: #df0000bf none repeat scroll 0% 0%"
-                ></span>
-                <span
-                  style="background: #605dbbb3 none repeat scroll 0% 0%"
-                ></span>
-                <span
-                  style="background: #00e60069 none repeat scroll 0% 0%"
-                ></span>
-                <span
-                  style="background: #0067fdc7 none repeat scroll 0% 0%"
-                ></span>
-                <span
-                  onclick="this.style.setProperty('background-color', prompt('Set Custom Color (eg. #004083 or crimson or anything that works with css)', document.documentElement.style.getPropertyValue('--accentColor')));"
-                  style="
+            <span
+              style="background: #df0000bf none repeat scroll 0% 0%"
+            ></span>
+            <span
+              style="background: #605dbbb3 none repeat scroll 0% 0%"
+            ></span>
+            <span
+              style="background: #00e60069 none repeat scroll 0% 0%"
+            ></span>
+            <span
+              style="background: #0067fdc7 none repeat scroll 0% 0%"
+            ></span>
+            <span
+              onclick="this.style.setProperty('background-color', prompt('Set Custom Color (eg. #004083 or crimson or anything that works with css)', document.documentElement.style.getPropertyValue('--accentColor')));"
+              style="
                     background: var(--accentColor) none repeat scroll 0% 0%;
                   "
-                  >🎨</span
-                >
-              </div>
-            </div>
-
-            <div class="option">
-              <h3>
-                <i class="fa-solid fa-circle-half-stroke"></i>Pure Black Theme
-              </h3>
-              <p>
-                The pure black theme uses a black background and helps reduce
-                battery usage on AMOLED devices or maybe you can just turn it on
-                when the dark theme is not enough.
-              </p>
-              <label class="switch"
-                ><input
-                  class="check"
-                  id="blackBtn"
-                  type="checkbox"
-                  autocomplete="off" /><span class="slider"></span
-              ></label>
-            </div>
-            <div class="option">
-              <h3>
-                <i class="fa-solid fa-circle-chevron-right"></i>Automatically
-                proceed to next page
-              </h3>
-
-              <p>
-                This helps save time by proceeding automatically to the next
-                page on downloading pages. <br />Caution: It may break your back
-                button.
-              </p>
-              <label class="switch"
-                ><input
-                  class="check"
-                  id="autoBtn"
-                  type="checkbox"
-                  autocomplete="off" /><span class="slider"></span
-              ></label>
-            </div>
-            <div id="src" class="option">
-              <h3><i class="fa-solid fa-server"></i>Sources</h3>
-
-              <p>
-                Configure your custom sources.<br />Eg. GitHub
-                Username/Repository.
-              </p>
-
-              <div>
-                <h3>Patches Organization</h3>
-                <input id="patch-org" class="searchBox" />
-                <h3>Patches Source</h3>
-                <input id="patch-src" class="searchBox" />
-              </div>
-
-              <div>
-                <h3>Integrations Organization</h3>
-                <input id="integrations-org" class="searchBox" />
-                <h3>Integrations Source</h3>
-                <input id="integrations-src" class="searchBox" />
-              </div>
-
-              <button class="highlighted" onclick="setSources();">
-                Set Sources
-              </button>
-            </div>
+            >🎨</span
+            >
           </div>
         </div>
-      </main>
-      <footer>
-        <a
-          href="https://github.com/reisxd/revanced-builder"
-          target="_blank"
-          aria-label="ReVanced Builder on GitHub"
-          title="ReVanced Builder on GitHub"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-brands fa-xl fa-github"
-          ></i
-        ></a>
-        <a
-          href="/about"
-          aria-label="AboutReVanced Builder"
-          title="AboutReVanced Builder"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-solid fa-xl fa-question-circle"
-          ></i
-        ></a>
-        <span class="right"></span>
-        <button onclick="location.href='/'">Home</button>
-      </footer>
+
+        <div class="option">
+          <h3>
+            <i class="fa-solid fa-circle-half-stroke"></i>Pure Black Theme
+          </h3>
+          <p>
+            The pure black theme uses a black background and helps reduce
+            battery usage on AMOLED devices or maybe you can just turn it on
+            when the dark theme is not enough.
+          </p>
+          <label class="switch"
+          ><input
+            autocomplete="off"
+            class="check"
+            id="blackBtn"
+            type="checkbox" /><span class="slider"></span
+          ></label>
+        </div>
+        <div class="option">
+          <h3>
+            <i class="fa-solid fa-circle-chevron-right"></i>Automatically
+            proceed to next page
+          </h3>
+
+          <p>
+            This helps save time by proceeding automatically to the next
+            page on downloading pages. <br />Caution: It may break your back
+            button.
+          </p>
+          <label class="switch"
+          ><input
+            autocomplete="off"
+            class="check"
+            id="autoBtn"
+            type="checkbox" /><span class="slider"></span
+          ></label>
+        </div>
+        <div class="option" id="src">
+          <h3><i class="fa-solid fa-server"></i>Sources</h3>
+
+          <p>
+            Configure your custom sources.<br />Eg. GitHub
+            Username/Repository.
+          </p>
+
+          <div>
+            <h3>Patches Organization</h3>
+            <input class="searchBox" id="patch-org" />
+            <h3>Patches Source</h3>
+            <input class="searchBox" id="patch-src" />
+          </div>
+
+          <div>
+            <h3>Integrations Organization</h3>
+            <input class="searchBox" id="integrations-org" />
+            <h3>Integrations Source</h3>
+            <input class="searchBox" id="integrations-src" />
+          </div>
+
+          <button class="highlighted" onclick="setSources();">
+            Set Sources
+          </button>
+        </div>
+      </div>
     </div>
-  </body>
-  <script>
-    ws.onopen = () => {
-      sendCommand({ event: 'getSettings' });
-    };
-  </script>
+  </main>
+  <footer>
+    <a
+      aria-label="ReVanced Builder on GitHub"
+      href="https://github.com/reisxd/revanced-builder"
+      target="_blank"
+      title="ReVanced Builder on GitHub"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-brands fa-xl fa-github"
+    ></i
+    ></a>
+    <a
+      aria-label="AboutReVanced Builder"
+      href="/about"
+      title="AboutReVanced Builder"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-solid fa-xl fa-question-circle"
+    ></i
+    ></a>
+    <span class="right"></span>
+    <button onclick="location.href='/'">Home</button>
+  </footer>
+</div>
+</body>
+<script>
+  ws.onopen = () => {
+    sendCommand({ event: 'getSettings' });
+  };
+</script>
 </html>
