--- a/public/versions/index.html
+++ b/public/versions/index.html
@@ -1,69 +1,69 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Version Selector</title>
-    <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/core.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/apps.css" rel="stylesheet" type="text/css" />
-    <link href="../styles/dependencies.css" rel="stylesheet" type="text/css" />
-    <script src="../index.js"></script>
-    <script src="../colors.js" defer></script>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width" name="viewport" />
+  <title>Version Selector</title>
+  <link href="../styles/fontawesome.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/core.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/apps.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/dependencies.css" rel="stylesheet" type="text/css" />
+  <script src="../index.js"></script>
+  <script defer src="../colors.js"></script>
+</head>
 
-  <body>
-    <div id="container">
-      <main>
-        <header>
-          <h1>
-            <i class="fa-solid fa-file-arrow-down"></i>Select the version you
-            want to download
-          </h1>
-        </header>
-        <div id="content--wrapper">
-          <div id="content">
-            <ul id="versions"></ul>
-          </div>
-        </div>
-      </main>
-      <footer>
-        <a
-          href="https://github.com/reisxd/revanced-builder"
-          target="_blank"
-          aria-label="ReVanced Builder on GitHub"
-          title="ReVanced Builder on GitHub"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-brands fa-xl fa-github"
-          ></i
-        ></a>
-        <a
-          href="/about"
-          target="_blank"
-          aria-label="About ReVanced Builder"
-          title="About ReVanced Builder"
-          ><i
-            aria-hidden="true"
-            class="social-icon fa-solid fa-xl fa-question-circle"
-          ></i
-        ></a>
-        <a
-          href="/settings"
-          target="_blank"
-          aria-label="Settings"
-          title="Settings"
-          ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
-        ></a>
-        <span class="right"></span>
-        <button id="back" onclick="history.back()">Back</button>
-        <button class="highlighted" id="continue" onclick="setAppVersion()">
-          Continue
-        </button>
-      </footer>
+<body>
+<div id="container">
+  <main>
+    <header>
+      <h1>
+        <i class="fa-solid fa-file-arrow-down"></i>Select the version you
+        want to download
+      </h1>
+    </header>
+    <div id="content--wrapper">
+      <div id="content">
+        <ul id="versions"></ul>
+      </div>
     </div>
-  </body>
-  <script>
-    ws.onopen = () => getAlreadyExists();
-  </script>
+  </main>
+  <footer>
+    <a
+      aria-label="ReVanced Builder on GitHub"
+      href="https://github.com/reisxd/revanced-builder"
+      target="_blank"
+      title="ReVanced Builder on GitHub"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-brands fa-xl fa-github"
+    ></i
+    ></a>
+    <a
+      aria-label="About ReVanced Builder"
+      href="/about"
+      target="_blank"
+      title="About ReVanced Builder"
+    ><i
+      aria-hidden="true"
+      class="social-icon fa-solid fa-xl fa-question-circle"
+    ></i
+    ></a>
+    <a
+      aria-label="Settings"
+      href="/settings"
+      target="_blank"
+      title="Settings"
+    ><i aria-hidden="true" class="social-icon fa-xl fa-solid fa-gear"></i
+    ></a>
+    <span class="right"></span>
+    <button id="back" onclick="history.back()">Back</button>
+    <button class="highlighted" id="continue" onclick="setAppVersion()">
+      Continue
+    </button>
+  </footer>
+</div>
+</body>
+<script>
+  ws.onopen = () => getAlreadyExists();
+</script>
 </html>
